Ajout de LoadDataListener + correction

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -146,7 +146,7 @@
 									{% for message in app.flashes('success') %}
 										<div class="alert alert-success">
 											<div class="alert-content">
-												<img src="{{ asset('styles/img/icones_contact/icons8-approbation-48.webp') }}" class="alert-icon" alt="Validation du formulaire">
+												<img src="{{ asset('styles/img/icones_contact/icons8-approbation-48.webp') }}" class="alert-icon" alt="Validation du formulaire de contact">
 												<span>{{ message }}</span>
 											</div>
 										</div>
@@ -154,7 +154,7 @@
 									{% for message in app.flashes('error') %}
 										<div class="alert alert-error">
 											<div class="alert-content">
-												<img src="{{ asset('styles/img/icones_contact/icons8-annuler-48.webp') }}" class="alert-icon" alt="Erreur du formulaire">
+												<img src="{{ asset('styles/img/icones_contact/icons8-annuler-48.webp') }}" class="alert-icon" alt="Erreur du formulaire de contact">
 												<span>{{ message }}</span>
 											</div>
 										</div>
