--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
 					<div id="viewport" class="l-viewport">
 						<div class="l-wrapper">
 							<header class="header">
-								<a class="header--logo accueil" aria-label="Aller à la page d'accueil" title="Retourner à l'accueil">
+								<a class="header--logo accueil" aria-label="Aller à la page d'accueil" title="Aller à la page d'accueil">
 									<img class="profil-img" src="{{ asset('styles/img/profil/profil.webp') }}" title="Yoan DE VRIEZE" alt="Yoan DE VRIEZE">
 									<p>Yoan DE VRIEZE</p>
 								</a>
