Personnalisation du Dashboard EasyAdmin

--- a/templates/admin/my-dashboard.html.twig
+++ b/templates/admin/my-dashboard.html.twig
@@ -1,4 +1,48 @@
 {% extends '@EasyAdmin/layout.html.twig' %}
 
 {% block main %}
+    <h1>Bienvenue sur le Dashboard</h1>
+    <hr>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card text-white mb-3" style="background-color:rgb(52, 104, 28);">
+                <div class="card-header">
+                    📩 Nombre de Messages
+                </div>
+                <div class="card-body">
+                    <h2 class="card-title">{{ nbMessage }}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card text-white mb-3" style="background-color:rgb(26, 60, 88);">
+                <div class="card-header">
+                    📌 Total de projets
+                </div>
+                <div class="card-body">
+                    <h2 class="card-title">{{ nbProjet }}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card text-white mb-3" style="background-color:rgb(92, 24, 71);">
+                <div class="card-header">
+                    🏢 Nombre total d'entreprise
+                </div>
+                <div class="card-body">
+                    <h2 class="card-title">{{ nbParcours }}</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card text-white mb-3" style="background-color:rgb(146, 117, 29);">
+                <div class="card-header">
+                    🛠️ Nombre de compétences
+                </div>
+                <div class="card-body">
+                    <h2 class="card-title">{{ nbSkill }}</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock main %}
