--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,18 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>
 			{% block title %}
-				Portfolio de Yoan DE VRIEZE - Développeur PHP Symfony/Laravel
+				Portfolio de {{ user.prenom}} {{ user.nom }} - Développeur PHP Symfony/Laravel
 			{% endblock %}
 		</title>
         <meta name="description" content="Développeur PHP spécialisé en Symfony, je crée des applications web performantes avec une expertise en back-end, en utilisant les bonnes pratiques pour des solutions sur mesure.">
-        <meta name="keywords" content="Portfolio, Yoan, DE VRIEZE, Yoan DE VRIEZE, PHP, Symfony, Framework, Développeur, Développeur PHP, Doctrine, MySQL, Visual code studio">
+        <meta name="keywords" content="Portfolio, {{ user.prenom }}, {{ user.nom }}, {{ user.prenom}} {{ user.nom }}, PHP, Symfony, Framework, Développeur, Développeur PHP, Doctrine, MySQL, Visual code studio">
         <meta name="author" content="Yoan DE VRIEZE">
-		<meta property="og:title" content="Yoan DE VRIEZE - Portfolio">
+		<meta property="og:title" content="{{ user.prenom}} {{ user.nom }} - Portfolio">
 		<meta property="og:description" content="Développeur PHP Symfony, créateur d'applications web performantes. Découvrez mon portfolio.">
-		<meta property="og:image" content="{{ asset('styles/img/profil/profil.webp') }}">
+		<meta property="og:image" content="{{ asset('styles/img/profil/' ~ user.photo) }}">
 		<meta property="og:url" content="https://127.0.0.1:8000">
 		<meta name="twitter:card" content="summary_large_image">
-		<link rel="icon" href="{{ asset('styles/img/profil/profil.webp') }}">
+		<link rel="icon" href="{{ asset('styles/img/profil/' ~ user.photo) }}">
 
 		{% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -42,8 +42,8 @@
 						<div class="l-wrapper">
 							<header class="header">
 								<a class="header--logo accueil" aria-label="Aller à la page d'accueil" title="Aller à la page d'accueil">
-									<img class="profil-img" src="{{ asset('styles/img/profil/profil.webp') }}" title="Yoan DE VRIEZE" alt="Yoan DE VRIEZE">
-									<p>Yoan DE VRIEZE</p>
+									<img class="profil-img" src="{{ asset('styles/img/profil/' ~  user.photo) }}" title="{{ user.prenom}} {{ user.nom }}" alt="{{ user.prenom}} {{ user.nom }}">
+									<p>{{ user.prenom}} {{ user.nom }}</p>
 								</a>
 							</header>
 							{% block body %}
